# TREX

./: .gitignore  .pre-commit-config.yaml  180425_lineage_loom.py  CHANGES.md  CITATION  LICENSE  README.md  braintrace.py  pyproject.toml  setup.cfg  setup.py  test.sh  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
annotation/: H2b-EGFP-30N-LTR.fa
expected/: clone_sequences.txt
mini/: NOTES.md  chrEGFP-30N.fa  chrEGFP-30N.fa.fai  chrTomato-N.fa  possorted_genome_bam.bam  possorted_genome_bam.bam.bai
mini-expected/: cells.txt  cells_filtered.txt  chrEGFP-30N_entries.bam  chrTomato-N_entries.bam  components.txt  corrected-graph.gv  groups.txt  log.txt  molecules.txt  molecules_corrected.txt  reads.txt
mini/filtered_gene_bc_matrices/hg38_EGFP-30N/: barcodes.tsv
mini/filtered_gene_bc_matrices/hg38_Tomato-N/: barcodes.tsv
notebooks/: barcode-distances.ipynb
references/: chrH2B-EGFP-N.gtf  chrTomato-N-pMR671.fa  chrTomato-N.gtf  pMR526_LV-EF1a-H2B-EGFP-BC.fa
src/braintrace/: __main__.py  bam.py  bamS3.py  cellS3.py  cellranger.py  clone.py  clustering.py  dataset.py  error.py  lineage.py  molecule.py
src/braintrace/cli/: __init__.py  run10x.py  runS3.py  smartseq3.py
src/trex/: __main__.py  bam.py  cell.py  cellS3.py  cellranger.py  clone.py  cloneS3.py  clustering.py  dataset.py  datasetS3.py  error.py  filters.py  graph.py  molecule.py  quality_control.py  utils.py  writers.py
src/trex/cli/: __init__.py  qc.py  qc_report.py  run10x.py  runS3.py  smartseq2.py  smartseq3.py
tests/: test_cluster.py  test_consensus.py  test_filters.py  test_graph.py  test_run10x.py  test_similar.py  test_subcommands.py
tests/data/: README.md  blacklist.csv  exclude_list.csv  smartseq2_test.bam.bai  smartseq3_test.bam  smartseq3_test.bam.bai
tests/data/outs/filtered_gene_bc_matrices/hg38_Tomato-N/: genes.tsv  matrix.mtx
tests/expected/: cells.txt  cells_filtered.txt  clone_details.txt  clone_sequences.txt  clones.txt  components.txt  data.loom  entries.bam  graph_corrected.gv  log.txt  molecules.txt  molecules_corrected.txt  molecules_filtered.txt  reads.txt  umi_count_matrix.csv
tests/expected_filter_clone_id/: log.txt
tests/expected_per_cell/: log.txt
tests/expected_smartseq2/: cells.txt  cells_filtered.txt  clone_details.txt  clone_sequences.txt  clones.txt  components.txt  components_corrected.txt  entries.bam  log.txt  molecules_corrected.txt  read_count_matrix.csv  reads.txt
tests/expected_smartseq3/: cells.txt  cells_filtered.txt  clone_details.txt  clone_sequences.txt  clones.txt  components.txt  components_corrected.txt  entries.bam  log.txt  molecules.txt  molecules_corrected.txt  read_count_matrix.csv  reads.txt  umi_count_matrix.csv
