[build-system]
requires = ["setuptools >= 63", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trex"
authors = [
    {name = "Leonie von Berlin"},
    {name = "Marcel Martin"}
]
description = "Simultaneous lineage TRacking and EXpression profiling of single cells using RNA-seq"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "pysam",
    "numpy<2",
    "loompy",
    "xopen>=0.5.0",
    "tinyalign",
    "matplotlib",
    "seaborn",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/frisen-lab/TREX"

[project.scripts]
trex = "trex.__main__:main"

[tool.setuptools_scm]
write_to = "src/trex/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff]
line-length = 92
