[metadata]
name = trex
author = Leonie von Berlin, Marcel Martin
author_email =
url = https://github.com/frisen-lab/TREX
description = simultaneous lineage TRacking and EXpression profiling of single cells using RNA-seq
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    pysam
    numpy
    loompy
    xopen>=0.5.0
    tinyalign
    pandas

[options.entry_points]
console_scripts =
    trex = trex.__main__:main

[options.packages.find]
where = src
